--- a/team.html
+++ b/team.html
@@ -12,8 +12,8 @@
 
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <script src="js/angular.js"></script>
 
+        <script src="js/angular.js"></script>
         <script src="js/app.js"></script>
         <script src="js/person.js"></script>
         <script src="js/team.js"></script>
@@ -44,32 +44,29 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-button" href="#!" data-activates="aboutMeDropDown">
-                                <strong>
-                                    {{'About ' + team.firstName}}
-                                    <i class="material-icons right">arrow_drop_down</i>
-                                </strong>
-                            </a>
+                            <div ng-controller="personController">
+                                <a class="dropdown-button" href="#!" data-activates="aboutMeDropDown">
+                                    <strong>
+                                        Account
+                                        <i class="material-icons right">arrow_drop_down</i>
+                                    </strong>
+                                </a>
+                            </div>
                         </li>
-                        <li>
-                            <a href="#">
-                                <strong>Account</strong>
-                            </a>
-                        </li>
-                    </ul>
 
+                    </ul>
                 </div>
             </nav>
 
             <!-- ID:mobileNavBar -->
-            <ul id="nav-mobile" class="side-nav fixed" ng-controller="navController">
+            <ul id="nav-mobile" class="side-nav fixed" ng-controller="personController">
                 <div class="container center top-pad20">
-                    <img class="circle responsive-img" ng-src="{{team.image}}">
+                    <img class="circle responsive-img" ng-src="{{person.image}}">
                 </div>
-                <h4 class="center">{{team.name}}</h4>
-                <h6 class="center">{{team.city}}</h6>
+                <h4 class="center">{{person.firstName + ' ' + person.lastName}}</h4>
+                <h6 class="center">{{person.city}}</h6>
                 <h6 class="center">
-                    <em>{{team.tagLine}}</em>
+                    <em>{{person.tagLine}}</em>
                 </h6>
                 <p>
                     <!-- tabState: {{state}} -->
@@ -82,10 +79,10 @@
                             <li class="bold">
                                 <a class="waves-effect waves-teal">Home</a>
                                 <a class="collapsible-header  waves-effect waves-teal">About
-                                    {{team.firstName}}</a>
-                                <div class="collapsible-body">
+                                    {{person.firstName}}</a>
+                                <div class="collapsible-body" ng-controller="navController">
                                     <ul>
-                                        <li ng-repeat="info in teamTabs">
+                                        <li ng-repeat="info in personTabs">
                                             <a href="#" ng-click="setState(info.name)">{{info.name}}</a>
                                         </li>
                                     </ul>
@@ -100,16 +97,16 @@
                                 <div class="collapsible-body">
                                     <ul>
                                         <li>
-                                            <a ng-show="team.github" ng-href="{{team.github}}">Github</a>
+                                            <a ng-show="person.github" ng-href="{{person.github}}">Github</a>
                                         </li>
                                         <li>
-                                            <a ng-show="team.facebook" ng-href="{{team.facebook}}">Facebook</a>
+                                            <a ng-show="person.facebook" ng-href="{{person.facebook}}">Facebook</a>
                                         </li>
                                         <li>
-                                            <a ng-show="team.twitter" ng-href="{{team.twitter}}">Twitter</a>
+                                            <a ng-show="person.twitter" ng-href="{{person.twitter}}">Twitter</a>
                                         </li>
                                         <li>
-                                            <a ng-show="team.email" ng-href="mailto:{{team.email}}">E-mail</a>
+                                            <a ng-show="person.email" ng-href="mailto:{{person.email}}">E-mail</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -133,7 +130,7 @@
                     <div class="col s12">
                         <ul class="tabs blue-grey lighten-5">
                             <!-- BUG - Active Tab doesn't follow between mobile to desktop -->
-                            <li class="tab col s3" ng-repeat="info in teamTabs" ng-class="{'active': info.state == state}">
+                            <li class="tab col s3" ng-repeat="info in personTabs" ng-class="{'active': info.state == state}">
                                 <a href="#" ng-click="setState(info.name)">{{info.name}}</a>
                             </li>
                         </ul>
@@ -141,50 +138,50 @@
                 </div>
             </div>
 
-            <!-- <div ng-controller="teamController">
-                <div class="top-pad30 right-pad30 left-pad40 hide-on-large-only">
-                    <img class="responsive-img center-image circle" ng-src="{{team.image}}" alt="{{team.firstName}}"/>
-                    <h4 class="hide-on-large-only center">{{team.name}}</h4>
+            <div ng-controller="personController">
+                <div class="top-pad30 right-pad40 left-pad40 hide-on-large-only">
+                    -
+                    <div class="" ng-hide="state != 'Resume'">
+                        <img class="responsive-img center-image circle" ng-src="{{person.image}}" alt="{{person.firstName}}"/>
+                        <h4 class="hide-on-large-only center">{{person.firstName + ' ' + person.lastName}}</h4>
+                    </div>
+                  </div>
 
-                </div>
-
-
-            <div ng-hide="state != 'Teams'">
-                <h5 class="center hide-on-large-only">{{state}}</h5>
-                <div class="row">
-                    <div class="col s12 m4" ng-repeat="team in team.teams">
-                        <div class="card">
-                            <div class="card-image waves-effect waves-block waves-light">
-                                <img class="activator" ng-src="{{team.image}}">
-                            </div>
-                            <div class="card-content">
-                                <span class="card-title activator grey-text text-darken-4">{{team.name}}
-                                    <i class="material-icons right">more_vert</i>
-                                </span>
-                                <p>
-                                    <a ng-href="{{team.website}}">Website</a>
-                                </p>
-                            </div>
-                            <div class="card-reveal">
-                                <span class="card-title grey-text text-darken-4">{{team.name}}
-                                    <i class="material-icons right">close</i>
-                                </span>
-                                <p>{{team.text}}</p>
+                    <div ng-hide="state != 'Teams'">
+                        <h5 class="center hide-on-large-only">{{state}}</h5>
+                        <div class="row">
+                            <div class="col s12 m4" ng-repeat="team in person.teams">
+                                <div class="card">
+                                    <div class="card-image waves-effect waves-block waves-light">
+                                        <img class="activator" ng-src="{{team.image}}">
+                                    </div>
+                                    <div class="card-content">
+                                        <span class="card-title activator grey-text text-darken-4">{{team.name}}
+                                            <i class="material-icons right">more_vert</i>
+                                        </span>
+                                        <p>
+                                            <a ng-href="{{team.website}}">Website</a>
+                                        </p>
+                                    </div>
+                                    <div class="card-reveal">
+                                        <span class="card-title grey-text text-darken-4">{{team.name}}
+                                            <i class="material-icons right">close</i>
+                                        </span>
+                                        <p>{{team.text}}</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
+
             </div>
 
+        </main>
+        <footer class="page-footer teal darken-3">
 
-        </div> -->
-
-    </div>
-
-</main>
-<footer class="page-footer teal darken-3">
-
-    <!-- <div class="container">
+            <!-- <div class="container">
         <div class="row">
             <div class="col l6 s12">
                 <h5 class="white-text">Footer Content</h5>
@@ -201,37 +198,37 @@
             </div>
         </div>
     </div> -->
-    <div class="footer-copyright">
-        <div class="container">
-            <strong>© 2016 Copyright Text
-            </strong>
-            <a class="grey-text text-lighten-4 right" href="#">
-                <strong>More Links</strong>
-            </a>
-        </div>
-    </div>
-</footer>
+            <div class="footer-copyright">
+                <div class="container">
+                    <strong>© 2016 Copyright Text
+                    </strong>
+                    <a class="grey-text text-lighten-4 right" href="#">
+                        <strong>More Links</strong>
+                    </a>
+                </div>
+            </div>
+        </footer>
 
-<!-- Dropdown Structure -->
-<ul id="aboutMeDropDown" class="dropdown-content" ng-controller="navController">
-    <li ng-repeat="info in teamTabs">
-        <a href="#" ng-click="setState(info.name)">
-            <strong>{{'Your ' +   info.name}}</strong>
-        </a>
-    </li>
+        <!-- Dropdown Structure -->
+        <ul id="aboutMeDropDown" class="dropdown-content" ng-controller="navController">
+            <li ng-repeat="tab in accountTabs">
+                <a href="#" ng-click="setState(tab.name)">
+                    <strong>{{tab.name}}</strong>
+                </a>
+            </li>
 
-</ul>
+        </ul>
 
-<!--Import jQuery before materialize.js-->
-<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
-<script type="text/javascript">
-    // Initialize collapse button
-    $(".button-collapse").sideNav();
-    // Show sideNav $('.button-collapse').sideNav('show'); // Hide sideNav $('.button-collapse').sideNav('hide');
-    $('ul.tabs').tabs();
-    $(".dropdown-button").dropdown();
-</script>
-</body>
+        <!--Import jQuery before materialize.js-->
+        <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
+        <script type="text/javascript" src="js/materialize.min.js"></script>
+        <script type="text/javascript">
+            // Initialize collapse button
+            $(".button-collapse").sideNav();
+            // Show sideNav $('.button-collapse').sideNav('show'); // Hide sideNav $('.button-collapse').sideNav('hide');
+            $('ul.tabs').tabs();
+            $(".dropdown-button").dropdown();
+        </script>
+    </body>
 
 </html>
