Bug fix: stateService not two-way

--- a/team.html
+++ b/team.html
@@ -138,7 +138,7 @@
                 </div>
             </div>
 
-            <div ng-controller="personController">
+            <div ng-controller="teamController">
                 <div class="top-pad30 right-pad40 left-pad40 hide-on-large-only">
                     -
                     <div class="" ng-hide="state != 'Resume'">
