--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                     <div class="col s12">
                         <ul class="tabs blue-grey lighten-5">
                             <!-- BUG - Active Tab doesn't follow between mobile to desktop -->
-                            <li class="tab col s3" ng-repeat="tab in teamTabs">
-                                <a href="#" ng-click="setState(tab.name)">{{info.name}}</a>
+                            <li class="tab col s3" ng-repeat="tab in personTabs">
+                                <a href="#" ng-click="setState(tab.name)">{{tab.name}}</a>
                             </li>
                         </ul>
                     </div>
