--- a/team.html
+++ b/team.html
@@ -29,7 +29,7 @@
             <nav class="teal darken-3" ng-controller="navController">
                 <div class="nav-wrapper flow-text">
                     <div class="container">
-                        <a href="#" class="brand-logo white-text">Logo</a>
+                        <a ng-href="{{home}}" class="brand-logo white-text">Home</a>
                     </div>
                     <a href="#" data-activates="nav-mobile" class="button-collapse left-pad20">
                         <i class="material-icons">menu</i>
@@ -59,18 +59,15 @@
             </nav>
 
             <!-- ID:mobileNavBar -->
-            <ul id="nav-mobile" class="side-nav fixed" ng-controller="personController">
+            <ul id="nav-mobile" class="side-nav fixed" ng-controller="teamController">
                 <div class="container center top-pad20">
-                    <img class="circle responsive-img" ng-src="{{person.image}}">
+                    <img class="circle responsive-img" ng-src="{{team.image}}">
                 </div>
-                <h4 class="center">{{person.firstName + ' ' + person.lastName}}</h4>
-                <h6 class="center">{{person.city}}</h6>
+                <h4 class="center">{{team.name}}</h4>
+                <h6 class="center">{{team.city}}</h6>
                 <h6 class="center">
-                    <em>{{person.tagLine}}</em>
+                    <em>{{team.tagLine}}</em>
                 </h6>
-                <p>
-                    <!-- tabState: {{state}} -->
-                </p>
                 <div class="top-pad20"></div>
 
                 <ul>
@@ -130,8 +127,8 @@
                     <div class="col s12">
                         <ul class="tabs blue-grey lighten-5">
                             <!-- BUG - Active Tab doesn't follow between mobile to desktop -->
-                            <li class="tab col s3" ng-repeat="info in personTabs" ng-class="{'active': info.state == state}">
-                                <a href="#" ng-click="setState(info.name)">{{info.name}}</a>
+                            <li class="tab col s3" ng-repeat="tab in teamTabs">
+                                <a href="#" ng-click="setState(tab.name)">{{tab.name}}</a>
                             </li>
                         </ul>
                     </div>
@@ -147,7 +144,111 @@
                     </div>
                   </div>
 
-                    <div ng-hide="state != 'Teams'">
+                    <div ng-hide="state != 'About'">
+                        <h5 class="center hide-on-large-only">{{state}}</h5>
+                        <div class="row">
+                            <div class="col s12 m4" ng-repeat="team in person.teams">
+                                <div class="card">
+                                    <div class="card-image waves-effect waves-block waves-light">
+                                        <img class="activator" ng-src="{{team.image}}">
+                                    </div>
+                                    <div class="card-content">
+                                        <span class="card-title activator grey-text text-darken-4">{{team.name}}
+                                            <i class="material-icons right">more_vert</i>
+                                        </span>
+                                        <p>
+                                            <a ng-href="{{team.website}}">Website</a>
+                                        </p>
+                                    </div>
+                                    <div class="card-reveal">
+                                        <span class="card-title grey-text text-darken-4">{{team.name}}
+                                            <i class="material-icons right">close</i>
+                                        </span>
+                                        <p>{{team.text}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div ng-hide="state != 'Members'">
+                        <h5 class="center hide-on-large-only">{{state}}</h5>
+                        <div class="row">
+                            <div class="col s12 m4" ng-repeat="team in person.teams">
+                                <div class="card">
+                                    <div class="card-image waves-effect waves-block waves-light">
+                                        <img class="activator" ng-src="{{team.image}}">
+                                    </div>
+                                    <div class="card-content">
+                                        <span class="card-title activator grey-text text-darken-4">{{team.name}}
+                                            <i class="material-icons right">more_vert</i>
+                                        </span>
+                                        <p>
+                                            <a ng-href="{{team.website}}">Website</a>
+                                        </p>
+                                    </div>
+                                    <div class="card-reveal">
+                                        <span class="card-title grey-text text-darken-4">{{team.name}}
+                                            <i class="material-icons right">close</i>
+                                        </span>
+                                        <p>{{team.text}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div ng-hide="state != 'Projects'">
+                        <h5 class="center hide-on-large-only">{{state}}</h5>
+                        <div class="row">
+                            <div class="col s12 m4" ng-repeat="team in person.teams">
+                                <div class="card">
+                                    <div class="card-image waves-effect waves-block waves-light">
+                                        <img class="activator" ng-src="{{team.image}}">
+                                    </div>
+                                    <div class="card-content">
+                                        <span class="card-title activator grey-text text-darken-4">{{team.name}}
+                                            <i class="material-icons right">more_vert</i>
+                                        </span>
+                                        <p>
+                                            <a ng-href="{{team.website}}">Website</a>
+                                        </p>
+                                    </div>
+                                    <div class="card-reveal">
+                                        <span class="card-title grey-text text-darken-4">{{team.name}}
+                                            <i class="material-icons right">close</i>
+                                        </span>
+                                        <p>{{team.text}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div ng-hide="state != 'Tab4'">
+                        <h5 class="center hide-on-large-only">{{state}}</h5>
+                        <div class="row">
+                            <div class="col s12 m4" ng-repeat="team in person.teams">
+                                <div class="card">
+                                    <div class="card-image waves-effect waves-block waves-light">
+                                        <img class="activator" ng-src="{{team.image}}">
+                                    </div>
+                                    <div class="card-content">
+                                        <span class="card-title activator grey-text text-darken-4">{{team.name}}
+                                            <i class="material-icons right">more_vert</i>
+                                        </span>
+                                        <p>
+                                            <a ng-href="{{team.website}}">Website</a>
+                                        </p>
+                                    </div>
+                                    <div class="card-reveal">
+                                        <span class="card-title grey-text text-darken-4">{{team.name}}
+                                            <i class="material-icons right">close</i>
+                                        </span>
+                                        <p>{{team.text}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div ng-hide="state != 'Tab5'">
                         <h5 class="center hide-on-large-only">{{state}}</h5>
                         <div class="row">
                             <div class="col s12 m4" ng-repeat="team in person.teams">
