--- a/ng-partials/navTop.html
+++ b/ng-partials/navTop.html
@@ -1,11 +1,14 @@
-<nav class="teal darken-3" >
+<nav class="teal darken-3">
     <div class="nav-wrapper flow-text">
         <div class="container">
             <a ng-href="{{home}}" class="brand-logo white-text">Home</a>
         </div>
-        <a href="#" data-activates="nav-mobile" class="button-collapse left-pad20">
-            <i class="material-icons">menu</i>
-        </a>
+        <div id="nav-menu">
+            <a data-activates="nav-mobile" class="button-collapse left-pad20">
+                <i class="material-icons">menu</i>
+            </a>
+        </div>
+
         <ul class="right hide-on-med-and-down right-pad30">
 
             <li ng-repeat="navTab in navTabs | filter:true">
@@ -17,7 +20,7 @@
             </li>
             <li>
                 <div>
-                    <a class="dropdown-button" href="#!" data-activates="aboutDropDown">
+                    <a class="dropdown-button" data-activates="aboutDropDown">
                         <strong>
                             Account
                             <i class="material-icons right">arrow_drop_down</i>
@@ -30,69 +33,6 @@
     </div>
 </nav>
 
-
-<ul id="nav-mobile" class="side-nav fixed">
-    <div class="container center top-pad20" >
-        <img class="circle responsive-img" ng-src="{{person.image}}">
-    </div>
-    <h4 class="center">{{person.firstName + ' ' + person.lastName}}</h4>
-    <h6 class="center">{{person.city}}</h6>
-    <h6 class="center">
-        <em>{{person.tagLine}}</em>
-    </h6>
-    <p>
-        <!-- tabState: {{state}} -->
-    </p>
-    <div class="top-pad20"></div>
-
-    <ul>
-        <li class="no-padding hide-on-large-only">
-            <ul class="collapsible collapsible-accordion">
-                <li class="bold">
-                    <a class="waves-effect waves-teal">Home</a>
-                    <a class="collapsible-header  waves-effect waves-teal">About
-                        {{person.firstName}}</a>
-                    <div class="collapsible-body" ng-controller="navController">
-                        <ul>
-                            <li ng-repeat="info in personTabs">
-                                <a href="#" ng-click="setTabState(info.name)">{{info.name}}</a>
-                            </li>
-                        </ul>Teams
-                    </div>
-                </li>
-            </ul>
-        </li>
-        <li class="no-padding hide-on-large-only">
-            <ul class="collapsible collapsible-accordion">
-                <li class="bold">
-                    <a class="collapsible-header  waves-effect waves-teal">Contact</a>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li>
-                                <a ng-show="person.github" ng-href="{{person.github}}">Github</a>
-                            </li>
-                            <li>
-                                <a ng-show="person.facebook" ng-href="{{person.facebook}}">Facebook</a>
-                            </li>
-                            <li>
-                                <a ng-show="person.twitter" ng-href="{{person.twitter}}">Twitter</a>
-                            </li>
-                            <li>
-                                <a ng-show="person.email" ng-href="mailto:{{person.email}}">E-mail</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </li>
-        <li class="no-padding top-pad20">
-            <a class="waves-effect waves-light btn white-text">
-                <i class="material-icons right">cloud</i>follow</a>
-        </li>
-    </ul>
-</ul>
-
-<script>
-  // Initialize collapse button
+<script type="text/javascript-lazy">
   $(".button-collapse").sideNav();
 </script>
